First animation first commit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <div class="wrapper">
         <h1>FL 07 Group Task 1</h1>
-        <div class="ball-bounce"></div>
+        <div class="ball-bounce">
+            <div id="ball_container">
+                <div class="ball"></div>
+                <div class="text"><span>Loading...</span></div>
+        </div>
         <div class="circle-loader"></div>
         <div class="pulsing"></div>
         <div class="equalizer"></div>
