Html markup changes, positioning elements to "flex".

--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
     <title>FL-07</title>
 </head>
 <body>
+    <h1>FL 07 Group Task 1</h1>
     <div class="wrapper">
-        <h1>FL 07 Group Task 1</h1>
-        <div class="ball-bounce"></div>
+
+      <div class="first-row">
+        <div class="ball-bounce">
+          <div class="ball"></div>
+          <div class="text"><span>Loading...</span></div>
+        </div>
         <div class="circle-loader"></div>
         <div class="pulsing"></div>
+      </div>
+
+      <div class="second-row">
         <div class="equalizer"></div>
         <div class="newton-loader"></div>
         <div class="spinner"></div>
+      </div>
+      
     </div>
 </body>
 </html>
