Added spinner(6) with animation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         <div class="pulsing"></div>
         <div class="equalizer"></div>
         <div class="newton-loader"></div>
-        <div class="spinner"></div>
+        <div class="spinner">
+            <div class="points">
+                <div class="point-first"></div>
+                <div class="point-second"></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
