--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
-    <title>FL-07</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <div class="wrapper">
-        <h1>FL 07 Group Task 1</h1>
-        <div class="ball-bounce"></div>
-        <div class="circle-loader"></div>
-        <div class="pulsing"></div>
-        <div class="equalizer"></div>
-        <div class="newton-loader"></div>
-        <div class="spinner"></div>
+    <div class="loader">
+        <div class="first"></div>
+        <div class="second"></div>
+        <div class="third"></div>
+        <div class="fourth"></div>
     </div>
 </body>
 </html>
