--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
       </div>
 
       <div class="second-row">
-        <div class="equalizer"></div>
+        <div class="equalizer">
+          <div class="equalizer-circle"></div>
+          <div class="equalizer-level-1"></div>
+          <div class="equalizer-level-2"></div>
+          <div class="equalizer-level-3"></div>
+          <div class="equalizer-level-4"></div>
+          <div class="equalizer-level-5"></div>
+        </div>
         <div class="newton-loader">
           <div class="first"></div>
           <div class="second"></div>
