--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
           <div class="text"><span>Loading...</span></div>
         </div>
         <div class="circle-loader"></div>
-        <div class="pulsing"></div>
+        <div class="pulsing">
+          <div class="big">
+            <div class="little"></div>
+          </div>
+        </div>
       </div>
 
       <div class="second-row">
