--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         </div>
         <div class="circle-loader"></div>
         <div class="pulsing">
-          <div class="big">
-            <div class="little"></div>
+          <div class="pulsing-dots">
+            <div class="dot-1"></div>
+            <div class="dot-2"></div>
           </div>
         </div>
       </div>
